ses/src/ses/grammar/SESGrammarParser.java
// Generated from SESGrammar.g4 by ANTLR 4.13.1
package ses.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SESGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FROM=1, PERSPECTIVE=2, CANBE=3, MADE_OF=4, MORE_THAN_ONE=5, TO_HAVE=6, 
		RANGE_OF=7, POSSESSIVE=8, OR=9, AND=10, STRINGLITERAL=11, BOOLEANLITERAL=12, 
		INTEGERLITERAL=13, FLOATLITERAL=14, WITH_VALUES=15, LIKE=16, IN=17, TOBE=18, 
		DEPENDS_ON=19, OUTPUT=20, COMMA=21, ENDSENTENCE=22, ENDINTERV=23, BEGININTERV=24, 
		INTEGER=25, FLOAT=26, IGNOREARTICLES=27, IDENTIFIER=28, IGNOREEMPTY=29;
	public static final int
		RULE_ses = 0, RULE_sentence = 1, RULE_aspect = 2, RULE_specialization = 3, 
		RULE_multiaspect = 4, RULE_variable = 5, RULE_range = 6, RULE_aspectReutil = 7, 
		RULE_specReutil = 8, RULE_variableDependance = 9, RULE_identifierListAnd = 10, 
		RULE_identifierListOr = 11, RULE_identifierList = 12, RULE_rangeType = 13, 
		RULE_rangeOfString = 14, RULE_rangeOfFloat = 15, RULE_floatInterval = 16, 
		RULE_floatingPoint = 17, RULE_rangeOfInteger = 18, RULE_intInterval = 19, 
		RULE_existingVarListAnd = 20, RULE_existingVarList = 21, RULE_existingVar = 22, 
		RULE_identifier = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"ses", "sentence", "aspect", "specialization", "multiaspect", "variable", 
			"range", "aspectReutil", "specReutil", "variableDependance", "identifierListAnd", 
			"identifierListOr", "identifierList", "rangeType", "rangeOfString", "rangeOfFloat", 
			"floatInterval", "floatingPoint", "rangeOfInteger", "intInterval", "existingVarListAnd", 
			"existingVarList", "existingVar", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FROM", "PERSPECTIVE", "CANBE", "MADE_OF", "MORE_THAN_ONE", "TO_HAVE", 
			"RANGE_OF", "POSSESSIVE", "OR", "AND", "STRINGLITERAL", "BOOLEANLITERAL", 
			"INTEGERLITERAL", "FLOATLITERAL", "WITH_VALUES", "LIKE", "IN", "TOBE", 
			"DEPENDS_ON", "OUTPUT", "COMMA", "ENDSENTENCE", "ENDINTERV", "BEGININTERV", 
			"INTEGER", "FLOAT", "IGNOREARTICLES", "IDENTIFIER", "IGNOREEMPTY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SESGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SESGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SesContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SESGrammarParser.EOF, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public SesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ses; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterSes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitSes(this);
		}
	}

	public final SesContext ses() throws RecognitionException {
		SesContext _localctx = new SesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ses);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				sentence();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 268435586L) != 0) );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public TerminalNode ENDSENTENCE() { return getToken(SESGrammarParser.ENDSENTENCE, 0); }
		public AspectContext aspect() {
			return getRuleContext(AspectContext.class,0);
		}
		public SpecializationContext specialization() {
			return getRuleContext(SpecializationContext.class,0);
		}
		public MultiaspectContext multiaspect() {
			return getRuleContext(MultiaspectContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public AspectReutilContext aspectReutil() {
			return getRuleContext(AspectReutilContext.class,0);
		}
		public SpecReutilContext specReutil() {
			return getRuleContext(SpecReutilContext.class,0);
		}
		public VariableDependanceContext variableDependance() {
			return getRuleContext(VariableDependanceContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(55);
				aspect();
				}
				break;
			case 2:
				{
				setState(56);
				specialization();
				}
				break;
			case 3:
				{
				setState(57);
				multiaspect();
				}
				break;
			case 4:
				{
				setState(58);
				variable();
				}
				break;
			case 5:
				{
				setState(59);
				range();
				}
				break;
			case 6:
				{
				setState(60);
				aspectReutil();
				}
				break;
			case 7:
				{
				setState(61);
				specReutil();
				}
				break;
			case 8:
				{
				setState(62);
				variableDependance();
				}
				break;
			}
			setState(65);
			match(ENDSENTENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AspectContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(SESGrammarParser.FROM, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode PERSPECTIVE() { return getToken(SESGrammarParser.PERSPECTIVE, 0); }
		public TerminalNode TOBE() { return getToken(SESGrammarParser.TOBE, 0); }
		public TerminalNode MADE_OF() { return getToken(SESGrammarParser.MADE_OF, 0); }
		public IdentifierListAndContext identifierListAnd() {
			return getRuleContext(IdentifierListAndContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SESGrammarParser.COMMA, 0); }
		public AspectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aspect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterAspect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitAspect(this);
		}
	}

	public final AspectContext aspect() throws RecognitionException {
		AspectContext _localctx = new AspectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_aspect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(FROM);
			setState(68);
			identifier();
			setState(69);
			match(PERSPECTIVE);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(70);
				match(COMMA);
				}
			}

			setState(73);
			identifier();
			setState(74);
			match(TOBE);
			setState(75);
			match(MADE_OF);
			setState(76);
			identifierListAnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecializationContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode CANBE() { return getToken(SESGrammarParser.CANBE, 0); }
		public IdentifierListOrContext identifierListOr() {
			return getRuleContext(IdentifierListOrContext.class,0);
		}
		public TerminalNode IN() { return getToken(SESGrammarParser.IN, 0); }
		public SpecializationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterSpecialization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitSpecialization(this);
		}
	}

	public final SpecializationContext specialization() throws RecognitionException {
		SpecializationContext _localctx = new SpecializationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_specialization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			identifier();
			setState(79);
			match(CANBE);
			setState(80);
			identifierListOr();
			setState(81);
			match(IN);
			setState(82);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiaspectContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(SESGrammarParser.FROM, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode PERSPECTIVE() { return getToken(SESGrammarParser.PERSPECTIVE, 0); }
		public TerminalNode TOBE() { return getToken(SESGrammarParser.TOBE, 0); }
		public TerminalNode MADE_OF() { return getToken(SESGrammarParser.MADE_OF, 0); }
		public TerminalNode MORE_THAN_ONE() { return getToken(SESGrammarParser.MORE_THAN_ONE, 0); }
		public TerminalNode COMMA() { return getToken(SESGrammarParser.COMMA, 0); }
		public MultiaspectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiaspect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterMultiaspect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitMultiaspect(this);
		}
	}

	public final MultiaspectContext multiaspect() throws RecognitionException {
		MultiaspectContext _localctx = new MultiaspectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multiaspect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(FROM);
			setState(85);
			identifier();
			setState(86);
			match(PERSPECTIVE);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(87);
				match(COMMA);
				}
			}

			setState(90);
			identifier();
			setState(91);
			match(TOBE);
			setState(92);
			match(MADE_OF);
			setState(93);
			match(MORE_THAN_ONE);
			setState(94);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode TO_HAVE() { return getToken(SESGrammarParser.TO_HAVE, 0); }
		public IdentifierListAndContext identifierListAnd() {
			return getRuleContext(IdentifierListAndContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			identifier();
			setState(97);
			match(TO_HAVE);
			setState(98);
			identifierListAnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RangeContext extends ParserRuleContext {
		public TerminalNode RANGE_OF() { return getToken(SESGrammarParser.RANGE_OF, 0); }
		public ExistingVarContext existingVar() {
			return getRuleContext(ExistingVarContext.class,0);
		}
		public TerminalNode TOBE() { return getToken(SESGrammarParser.TOBE, 0); }
		public RangeTypeContext rangeType() {
			return getRuleContext(RangeTypeContext.class,0);
		}
		public RangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitRange(this);
		}
	}

	public final RangeContext range() throws RecognitionException {
		RangeContext _localctx = new RangeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(RANGE_OF);
			setState(101);
			existingVar();
			setState(102);
			match(TOBE);
			setState(103);
			rangeType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AspectReutilContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(SESGrammarParser.FROM, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode PERSPECTIVE() { return getToken(SESGrammarParser.PERSPECTIVE, 0); }
		public TerminalNode COMMA() { return getToken(SESGrammarParser.COMMA, 0); }
		public TerminalNode TOBE() { return getToken(SESGrammarParser.TOBE, 0); }
		public TerminalNode LIKE() { return getToken(SESGrammarParser.LIKE, 0); }
		public AspectReutilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aspectReutil; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterAspectReutil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitAspectReutil(this);
		}
	}

	public final AspectReutilContext aspectReutil() throws RecognitionException {
		AspectReutilContext _localctx = new AspectReutilContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_aspectReutil);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(FROM);
			setState(106);
			identifier();
			setState(107);
			match(PERSPECTIVE);
			setState(108);
			match(COMMA);
			setState(109);
			identifier();
			setState(110);
			match(TOBE);
			setState(111);
			match(LIKE);
			setState(112);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecReutilContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode TOBE() { return getToken(SESGrammarParser.TOBE, 0); }
		public TerminalNode LIKE() { return getToken(SESGrammarParser.LIKE, 0); }
		public TerminalNode IN() { return getToken(SESGrammarParser.IN, 0); }
		public SpecReutilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specReutil; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterSpecReutil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitSpecReutil(this);
		}
	}

	public final SpecReutilContext specReutil() throws RecognitionException {
		SpecReutilContext _localctx = new SpecReutilContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_specReutil);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			identifier();
			setState(115);
			match(TOBE);
			setState(116);
			match(LIKE);
			setState(117);
			identifier();
			setState(118);
			match(IN);
			setState(119);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDependanceContext extends ParserRuleContext {
		public ExistingVarContext existingVar() {
			return getRuleContext(ExistingVarContext.class,0);
		}
		public TerminalNode DEPENDS_ON() { return getToken(SESGrammarParser.DEPENDS_ON, 0); }
		public ExistingVarListAndContext existingVarListAnd() {
			return getRuleContext(ExistingVarListAndContext.class,0);
		}
		public VariableDependanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDependance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterVariableDependance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitVariableDependance(this);
		}
	}

	public final VariableDependanceContext variableDependance() throws RecognitionException {
		VariableDependanceContext _localctx = new VariableDependanceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variableDependance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			existingVar();
			setState(122);
			match(DEPENDS_ON);
			setState(123);
			existingVarListAnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierListAndContext extends ParserRuleContext {
		public IdentifierListAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierListAnd; }
	 
		public IdentifierListAndContext() { }
		public void copyFrom(IdentifierListAndContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdAndContext extends IdentifierListAndContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IdAndContext(IdentifierListAndContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterIdAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitIdAnd(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdAndListContext extends IdentifierListAndContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode AND() { return getToken(SESGrammarParser.AND, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SESGrammarParser.COMMA, 0); }
		public IdAndListContext(IdentifierListAndContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterIdAndList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitIdAndList(this);
		}
	}

	public final IdentifierListAndContext identifierListAnd() throws RecognitionException {
		IdentifierListAndContext _localctx = new IdentifierListAndContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_identifierListAnd);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new IdAndContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				identifier();
				}
				break;
			case 2:
				_localctx = new IdAndListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				identifierList(0);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(127);
					match(COMMA);
					}
				}

				setState(130);
				match(AND);
				setState(131);
				identifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierListOrContext extends ParserRuleContext {
		public IdentifierListOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierListOr; }
	 
		public IdentifierListOrContext() { }
		public void copyFrom(IdentifierListOrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdOrListContext extends IdentifierListOrContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode OR() { return getToken(SESGrammarParser.OR, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SESGrammarParser.COMMA, 0); }
		public IdOrListContext(IdentifierListOrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).enterIdOrList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SESGrammarListener ) ((SESGrammarListener)listener).exitIdOrList(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdOrContext extends IdentifierListOrContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IdOrContext(IdentifierListOrContext ctx) { copyFrom(ctx); }
		@Override
